--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.12.0",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
+    "dotenv": "^16.4.7",
     "eslint-config-prettier": "^10.0.1",
     "eslint-config-react-app": "^7.0.1",
     "jest": "^29.7.0",
